--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Users</h1>
 <p><i>Version App: <%= ENV['APP_VERSION'] %></i></p>
-<p><i>Innver Version App: 1.0.2</i></p>
+<p><i>Innver Version App: 1.0.3/i></p>
 
 <%= link_to 'New user', new_user_path %>
 
